--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="feature-img">
-          <img src="/Barber_Shop_img/barber-man.jpg" alt="" />
+          <img src="./Barber_Shop_img/barber-man.jpg" alt="" />
         </div>
       </div>
     </section>
