--- a/index.html
+++ b/index.html
@@ -218,6 +218,6 @@
       
       </div>
     </section>
-    <script src="/app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
